--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <link rel="stylesheet" href="styles.css">
+        <title>Mean index sivu</title>
     </head>
     <body>
-        <h1>My First Heading</h1>
-        <p>My first paragraph.</p>
+        <h1>Minun ensimmäinen sivu</h1>
+        <p>Tästä se alkaa!</p>
+        <div class="navigointi">
+            <ul>
+                <li><a href="eka.html">Eka linkki</a></li>
+                <li><a href="toka.html">Toka linkki</a></li>
+                <li><a href="kolmas.html">Kolmas linkki</a></li>
+            </ul>
+        </div>
+        <h2>Tästä alkaa uusi juttu</h2>
+        <p>Kivaa kun pääsee oppimaan uutta.</p>
+        <h3>Tässä vielä yksi juttu</h3>
+        <p>Kuinka tässä käy?</p>
+        <footer>&copy; 2024</footer>
     </body>
 </html>
